@@ -3,6 +3,7 @@
 -   Added "Stats" page
 -   Added technology info
 -   Reduced "More velocity and acceleration" exp shop bonus from 15% to 12%
+-   Added prestige info
 
 3/10/2020
 -   New challenge: Expanding Universe
